# EPAM

./: TaskFour.cpp  TaskOne  TaskOne.cpp  TaskThree  TaskThree.cpp  TaskTwo  TaskTwo.cpp
MPI/BlockMatrix/: cpi  cpi.c  cpi.pbs  cpi.pbs.e6053  cpi.pbs.o5698  cpi.pbs.o5832  cpi.pbs.o6053
MPI/FirstTask/: cpi  cpi.c  cpi.pbs  cpi.pbs.o5496  cpi.pbs.o5519
MPI/Matrix/: compile.sh  cpi  cpi.c  cpi.pbs  cpi.pbs.o5681
MPI/SecondTask/: cpi  cpi.c  cpi.pbs  cpi.pbs.o5281  cpi.pbs.o6217  run.sh
MPI/SixTask/: .cpi.c.swp  cpi  cpi.c  cpi.pbs  cpi.pbs.o5276  cpi.pbs.o5516  cpi.pbs.o5522  cpi.pbs.o6218
MPI/ThirdTask/: cpi  cpi.c  cpi.pbs  cpi.pbs.o5277  cpi.pbs.o6216
OpenMP/: TaskFour  TaskOne  TaskOne.cc  TaskOne.cpp  TaskThree  TaskThree.cc  TaskThree.cpp  TaskTwo  TaskTwo.cc  TaskTwo.cpp  meson.build
OpenMP/scripts/: draw  plot.gnuplot  time.py
Sort/Merge/: .cpi.c.swp  cpi  cpi.c  cpi.pbs  cpi.pbs.o7852
Sort/MergeCpp/: .nfs0000000000e7164e000003c7  compile.sh  cpi  cpi.cpp  cpi.pbs  cpi.pbs.o9344
